No ref: Imported template

--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,25 @@
-title: Hello, world! I'm David Freeman
+title: Such improve, so amaze - Wow! 
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+author: Johannes Neutze # add your name
+author-img: johannes-neutze.jpg # add your photo
+about-author: Android Engineer and Architect with over 6 years of track record in building mobile products to enter new markets and scale to various countries across the globe. Strong passion for creating user-centric products by considering limitations and capabilities of software implementation. # add description
+social-twitter: johannes-neutze.jpg # add your Twitter handle
+social-facebook: johannes.neutze # add your Facebook handle
+social-github: neutze # add your Github handle
+social-linkedin: johannes-neutze # add your Linkedin handle
+social-email: johannes@neutze.de # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: neutze # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
